--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"cSpell.words": ["zidny"]
+  "cSpell.words": [
+    "attributors",
+    "lato",
+    "Quilljs",
+    "shortcode",
+    "shortcodes",
+    "zidny"
+  ]
 }
