Add FilePont file uploader

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
+    "addfile",
     "attributors",
     "domtoimage",
+    "filepond",
     "lato",
     "Quilljs",
     "shortcode",
